Div-Struktur eingefügt

--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -16,7 +16,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Love Path</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -32,5 +32,12 @@
   <!-- to create a completely dynamic UI.        -->
   <!--                                           -->
   <body>
+  <div id="Container">
+  	<div id="Oben"><h1>Love Path - Walk into hearts</h1></div>
+  	<div id="Navi"></div>
+  	<div id="Inhalt"></div>
+  	<div id="Unten"></div>
+  </div>
+  
   </body>
 </html>
