--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -1,43 +1,29 @@
 <!doctype html>
-<!-- The DOCTYPE declaration above will set the     -->
-<!-- browser's rendering engine into                -->
-<!-- "Standards Mode". Replacing this declaration   -->
-<!-- with a "Quirks Mode" doctype is not supported. -->
-
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
-    <!--                                                               -->
-    <!-- Consider inlining CSS to reduce the number of requested files -->
-    <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="LGrotte.css">
-
-    <!--                                           -->
-    <!-- Any title is fine                         -->
-    <!--                                           -->
-    <title>Love Path</title>
-    
-    <!--                                           -->
-    <!-- This script loads your compiled module.   -->
-    <!-- If you add any GWT meta tags, they must   -->
-    <!-- be added before this line.                -->
-    <!--                                           -->
-    <script type="text/javascript" language="javascript" src="lgrotte/lgrotte.nocache.js"></script>
-  </head>
-
-  <!--                                           -->
-  <!-- The body can have arbitrary html, or      -->
-  <!-- you can leave the body empty if you want  -->
-  <!-- to create a completely dynamic UI.        -->
-  <!--                                           -->
-  <body>
-  <div id="Container">
-  	<div id="Oben"><h1>Love Path - Walk into hearts</h1></div>
-  	<div id="Navi"></div>
-  	<div id="Inhalt"></div>
-  	<div id="Unten"></div>
-  </div>
-  
-  </body>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<link type="text/css" rel="stylesheet" href="LGrotte.css">
+<title>Love Path</title>
+<script type="text/javascript" language="javascript"
+	src="lgrotte/lgrotte.nocache.js"></script>
+</head>
+<body>
+	<div id="Container">
+		<div id="Inhalt">
+			<div id="Oben">
+				<h1>Love Path - Walk into hearts</h1>
+			</div>
+			<div id="Navi">
+				<ul>
+					<li><a href="#">Find Love</a></li>
+					<li><a href="#">Profil</a></li>
+					<li><a href="#">Merkliste</a></li>
+					<li><a href="#">Impressum</a></li>
+				</ul>
+			</div>
+			<div id="Mitte"></div>
+			<div id="Unten"></div>
+		</div>
+	</div>
+</body>
 </html>
