Grundstruktur des GUI überarbeitet

--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -9,21 +9,26 @@
 </head>
 <body>
 	<div id="Container">
-		<div id="Inhalt">
-			<div id="Oben">
-				<h1>Love Path - Walk into hearts</h1>
-			</div>
-			<div id="Navi">
-				<ul>
-					<li><a href="#">Find Love</a></li>
-					<li><a href="#">Profil</a></li>
-					<li><a href="#">Merkliste</a></li>
-					<li><a href="#">Impressum</a></li>
-				</ul>
-			</div>
-			<div id="Mitte"></div>
-			<div id="Unten"></div>
+		<div id="Headline">
+			<h1>Love Path - Walk into hearts</h1>
 		</div>
+		<div id="Navi">
+			<ul>
+				<li><a href="#">Find Love</a></li>
+				<li><a href="#">Profil</a></li>
+				<li><a href="#">Merkliste</a></li>
+				<li><a href="#">Impressum</a></li>
+			</ul>
+		</div>
+		<div id="Inhalt">
+			<div id="Inhalt_oben"></div>
+			<div id=Inhalt_unten"></div>
+		</div>
+		<div id="Einstellungen">
+			<div id="Einstellungen_oben"></div>
+			<div id="Einstellungen_unten"></div>
+		</div>
+		<div id="Fußzeile"></div>
 	</div>
 </body>
 </html>
