--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -21,14 +21,34 @@
 			</ul>
 		</div>
 		<div id="Inhalt">
-			<div id="Inhalt_oben"></div>
-			<div id=Inhalt_unten"></div>
+			<div id="Inhalt_oben">
+				<p>IO Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+					diam nonumy eirmod tempor invidunt ut labore et dolore magna
+					aliquyam erat, sed diam voluptua. At vero eos et accusam et.</p>
+			</div>
+			<div id=Inhalt_unten">
+				<p>IU Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+					diam nonumy eirmod tempor invidunt ut labore et dolore magna
+					aliquyam erat, sed diam voluptua. At vero eos et accusam et.</p>
+			</div>
 		</div>
 		<div id="Einstellungen">
-			<div id="Einstellungen_oben"></div>
-			<div id="Einstellungen_unten"></div>
+			<div id="Einstellungen_oben">
+				<p>EOLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+					diam nonumy eirmod tempor invidunt ut labore et dolore magna
+					aliquyam erat, sed diam voluptua. At vero eos et accusam et.</p>
+			</div>
+			<div id="Einstellungen_unten">
+				<p>EULorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+					diam nonumy eirmod tempor invidunt ut labore et dolore magna
+					aliquyam erat, sed diam voluptua. At vero eos et accusam et.</p>
+			</div>
 		</div>
-		<div id="Fußzeile"></div>
+		<div id="Fusszeile">
+		<p>FLorem ipsum dolor sit amet, consetetur 
+			sadipscing elitr, sed diam nonumy eirmod 
+			tempor invidunt ut.</p>
+		</div>
 	</div>
 </body>
 </html>
