id:"Details" eingefügt

--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -13,6 +13,7 @@
 			<h1>Love Path - Walk into hearts</h1>
 		</div>
 		<div id="Navi"></div>
+		<div id="Details"></div>
 		<div id="Inhalt">
 			<div id="Inhalt_oben">
 				<p>IO Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
