--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="Container">
 		<div id="Headline">
-			<h1>Love Path - Walk into hearts</h1>
+			<h1>Die GROTTE</h1>
 		</div>
 		<div id="Navi"></div>
 		<div id="Details"></div>
