Mitte-Div hinzugefügt und via CSS gestaltet

--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -30,6 +30,12 @@
 				<p></p>
 			</div>
 		</div>
+		<div id="Mitte">
+		<p>
+		Das ist ein Testtext, der Lukas helfen soll, bei der CSS-Gestaltung des Divs.
+		Er wird gelöscht, sobald er nicht mehr benötigt wird.
+		</p>
+		</div>
 		<div id="Fusszeile">
 		</div>
 	</div>
