--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="Container">
 		<div id="Headline">
-			<h1>Die GROTTE</h1>
+			<h1>Die Grotte</h1>
 		</div>
 		<div id="Navi"></div>
 		<div id="Details"></div>
@@ -31,12 +31,10 @@
 			</div>
 		</div>
 		<div id="Mitte">
-		<p>
-		Das ist ein Testtext, der Lukas helfen soll, bei der CSS-Gestaltung des Divs.
-		Er wird gelöscht, sobald er nicht mehr benötigt wird.
-		</p>
+			<p></p>
 		</div>
 		<div id="Fusszeile">
+		<p></p>
 		</div>
 	</div>
 </body>
