--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -34,7 +34,14 @@
 			<p></p>
 		</div>
 		<div id="Fusszeile">
-		<p></p>
+			<a href="https://www.hdm-stuttgart.de/" target="_blank"><img
+				class="bild_links"
+				src="https://idblog.hdm-stuttgart.de/projektkonzept-2015-hdmlogo/files/2015/04/logo_Wirtschaftsinformatik-und-digitale-Meiden.jpg"
+				alt="Logo des Wi-Studiengangs" /></a> <a
+				href="http://www.wi.hdm-stuttgart.de/index.php/%C3%9Cberblick.html"
+				target="_blank"><img class="bild_rechts"
+				src="https://www.hdm-stuttgart.de/stylesheets_bilder/Logo_Graustufen_1.gif"
+				alt="Logo der HdM" /></a>
 		</div>
 	</div>
 </body>
