HTML-CSS Struktur an Gui angepasst

--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -14,24 +14,22 @@
 		</div>
 		<div id="Navi"></div>
 		<div id="Details"></div>
-		<div id="Inhalt">
-			<div id="Inhalt_oben">
-				<p></p>
+		<div id="Content">
+			<div id="Spalte_links">
+				<div id="Inhalt">
+					<div id="Inhalt_oben">
+						<p></p>
+					</div>
+					<div id="Inhalt_unten">
+						<p></p>
+					</div>
+				</div>
+				<div id="Mitte">
+					<p></p>
+				</div>
 			</div>
-			<div id="Inhalt_unten">
-				<p></p>
+			<div id="Einstellungen">
 			</div>
-		</div>
-		<div id="Einstellungen">
-			<div id="Einstellungen_oben">
-				<p></p>
-			</div>
-			<div id="Einstellungen_unten">
-				<p></p>
-			</div>
-		</div>
-		<div id="Mitte">
-			<p></p>
 		</div>
 		<div id="Fusszeile">
 			<a href="https://www.hdm-stuttgart.de/" target="_blank"><img
