Report Entry Point funktioniert

--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -5,12 +5,12 @@
 <link type="text/css" rel="stylesheet" href="LGrotte.css">
 <title>Love Path</title>
 <script type="text/javascript" language="javascript"
-	src="lgrotte/reportgenerator.nocache.js"></script>
+	src="report/report.nocache.js"></script>
 </head>
 <body>
 	<div id="Container">
 		<div id="Headline">
-			<h1>THIS IS REPOOOOOOOOOOOOOOOOORT</h1>
+			THIS IS REPOOOOOOOOOOOOOOOOORT
 		</div>
 	</div>
 </body>
