--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -5,7 +5,7 @@
 <link type="text/css" rel="stylesheet" href="LGrotte.css">
 <title>Love Path</title>
 <script type="text/javascript" language="javascript"
-	src="report/report.nocache.js"></script>
+	src="reportgenerator/reportgenerator.nocache.js"></script>
 </head>
 <body>
 	<div id="Container">
