--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -6,6 +6,8 @@
 <title>Love Path</title>
 <script type="text/javascript" language="javascript"
 	src="lgrotte/lgrotte.nocache.js"></script>
+	<script type="text/javascript" language="javascript"
+	src="report/report.nocache.js"></script>
 </head>
 <body>
 	<div id="Container">
