Logout-Button mit Pop-Up-Panel hinzugefügt und ein bisschen CSS

--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -12,7 +12,8 @@
 		<div id="Headline">
 			<h1>Die Grotte</h1>
 		</div>
-		<div id="Navi"></div>
+		<div id="Navi">
+		<div id="Logout"></div></div>
 		<div id="Details"></div>
 		<div id="Content">
 			<div id="Spalte_links">
