Report Element gestylet

--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -8,10 +8,10 @@
 	src="reportgenerator/reportgenerator.nocache.js"></script>
 </head>
 <body>
-	<div id="Container">
+	<!-- <div id="Container">
 		<div id="Headline">
 			THIS IS REPOOOOOOOOOOOOOOOOORT
 		</div>
-	</div>
+	</div> -->
 </body>
 </html>
