Gui verändert und Anmelde Button hinzugefügt, auch Partnervorschläge

--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -6,7 +6,7 @@
 <title>Love Path</title>
 <script type="text/javascript" language="javascript"
 	src="lgrotte/lgrotte.nocache.js"></script>
-	<script type="text/javascript" language="javascript"
+<script type="text/javascript" language="javascript"
 	src="report/report.nocache.js"></script>
 </head>
 <body>
@@ -15,7 +15,8 @@
 			<h1>Die Grotte</h1>
 		</div>
 		<div id="Navi">
-		<div id="Logout"></div></div>
+			<div id="Logout"></div>
+		</div>
 		<div id="Details"></div>
 		<div id="Content">
 			<div id="Spalte_links">
@@ -31,8 +32,7 @@
 					<p></p>
 				</div>
 			</div>
-			<div id="Einstellungen">
-			</div>
+			<div id="Einstellungen"></div>
 		</div>
 		<div id="Fusszeile">
 			<a href="https://www.hdm-stuttgart.de/" target="_blank"><img
@@ -44,6 +44,5 @@
 				src="https://www.hdm-stuttgart.de/stylesheets_bilder/Logo_Graustufen_1.gif"
 				alt="Logo der HdM" /></a>
 		</div>
-	</div>
 </body>
 </html>
