--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -14,9 +14,9 @@
 		<div id="Headline">
 			<h1>Die Grotte</h1>
 		</div>
-		<div id="Navi">
-			<div id="Logout"></div>
-		</div>
+		<!-- <div id="Navi_Conatiner"> -->
+		<div id="Navi"></div>
+		<!-- </div> -->
 		<div id="Details"></div>
 		<div id="Content">
 			<div id="Spalte_links">
