Report.html Elemente hinzugefügt

--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -8,10 +8,11 @@
 	src="reportgenerator/reportgenerator.nocache.js"></script>
 </head>
 <body>
-	<!-- <div id="Container">
-		<div id="Headline">
-			THIS IS REPOOOOOOOOOOOOOOOOORT
-		</div>
-	</div> -->
+	<div id="Container">
+		<div id="Headline">THIS IS REPOOOOOOOOOOOOOOOOORT</div>
+		<div id="Body-left">Test</div>
+		<div id="Body-right">Test</div>
+	</div>
+
 </body>
 </html>
