drei Blöcke für das CSS erstellt. (Head, Body-left, Body-right)

--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -3,16 +3,16 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link type="text/css" rel="stylesheet" href="LGrotte.css">
-<title>Love Path</title>
+<title>LiebesGrotte</title>
 <script type="text/javascript" language="javascript"
 	src="reportgenerator/reportgenerator.nocache.js"></script>
 </head>
 <body>
 	<div id="Container">
-		<div id="Headline">THIS IS REPOOOOOOOOOOOOOOOOORT</div>
-		<div id="Body-left">Test</div>
-		<div id="Body-right">Test</div>
+		<div id="Headline">DEIN LIEBESREPORT</div>
 	</div>
+	<div id="Body-left">Test</div>
+	<div id="Body-right">Test</div>
 
 </body>
 </html>
