Das Langese-Abklatsch Logo ist drin :D

--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -10,7 +10,9 @@
 <body>
 	<div id="Container">
 		<div id="Headline">
-			<h1>Die Grotte</h1>
+			<img class="logo_grotte"
+				src="logo_weiß.png"
+				alt="Logo der Liebes-Grotte" />
 		</div>
 		<!-- <div id="Navi_Conatiner"> -->
 		<div id="Navi"></div>
