--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -8,7 +8,7 @@
 	src="reportgenerator/reportgenerator.nocache.js"></script>
 </head>
 <body>
-	<div id="Container">
+	<div id="Container_Report">
 		<div id="Headline">DEIN LIEBESREPORT</div>
 	</div>
 	<div id="Body-left">Test</div>
