--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 	<div id="Container_Report">
-		<div id="Headline">DEIN LIEBESREPORT</div>
+		<div id="Headline">
+			<img class="logo_grotte" src="logo_weiß.png"
+				alt="Logo der Liebes-Grotte" />
+			<div id="Navi"></div>
+		</div>
 	</div>
 	<div id="Body-left">Test</div>
 	<div id="Body-right">Test</div>
