bisschen die gui angepasst

--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -15,8 +15,8 @@
 			<div id="Navi"></div>
 		</div>
 	</div>
-	<div id="Body-left">Test</div>
-	<div id="Body-right">Test</div>
+	<div id="Body-left"></div>
+	<div id="Body-right"></div>
 
 </body>
 </html>
