bißchen report-css

--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -15,8 +15,11 @@
 			<div id="Navi"></div>
 		</div>
 	</div>
-	<div id="Body-left"></div>
+	<div id="Body-left">
+	<div id="Report-Aehnlichkeit"></div>
+	<div id="Report-Attribut"></div>
+	<div id="Report-Eigenschaft"></div>
+</div>
 	<div id="Body-right"></div>
-
 </body>
 </html>
