--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -9,38 +9,30 @@
 </head>
 <body>
 	<div id="Container">
-			<div id="Navi_Conatiner">
-				<div id="Logo">
-					<img class="logo_grotte" src="logo_weiß.png"
+		<div id="Navi_Container">
+			<div id="Logo">
+				<img class="logo_grotte" src="logo_weiß.png"
 					alt="Logo der Liebes-Grotte" />
-				</div>
-				<div id="Navi"></div>
 			</div>
-		<div id="Content">
-			<div id="Spalte_links">
+			<div id="Navi"></div>
+		</div>
+		<div id="Content_Container">
+			<div id="Content">
 				<div id="Inhalt">
-					<div id="Inhalt_oben">
-					<p></p>
-					</div>
-					<div id="Inhalt_unten">
-					<p></p>
-					</div>
 				</div>
-				<div id="Mitte">
-				<p></p>
+				<div id="Zusatz">
 				</div>
 			</div>
-			<div id="Einstellungen"></div>
 		</div>
 		<div id="Fusszeile">
-		<a href="https://www.hdm-stuttgart.de/" target="_blank"><img
-			class="bild_links"
-			src="https://idblog.hdm-stuttgart.de/projektkonzept-2015-hdmlogo/files/2015/04/logo_Wirtschaftsinformatik-und-digitale-Meiden.jpg"
-			alt="Logo des Wi-Studiengangs" /></a> <a
-			href="http://www.wi.hdm-stuttgart.de/index.php/%C3%9Cberblick.html"
-			target="_blank"><img class="bild_rechts"
-			src="https://www.hdm-stuttgart.de/stylesheets_bilder/Logo_Graustufen_1.gif"
-			alt="Logo der HdM" /></a>
+			<a href="https://www.hdm-stuttgart.de/" target="_blank"><img
+				class="bild_links"
+				src="https://idblog.hdm-stuttgart.de/projektkonzept-2015-hdmlogo/files/2015/04/logo_Wirtschaftsinformatik-und-digitale-Meiden.jpg"
+				alt="Logo des Wi-Studiengangs" /></a> <a
+				href="http://www.wi.hdm-stuttgart.de/index.php/%C3%9Cberblick.html"
+				target="_blank"><img class="bild_rechts"
+				src="https://www.hdm-stuttgart.de/stylesheets_bilder/Logo_Graustufen_1.gif"
+				alt="Logo der HdM" /></a>
 		</div>
 	</div>
 </body>
