--- a/LGrotte/war/Report.html
+++ b/LGrotte/war/Report.html
@@ -2,24 +2,25 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link type="text/css" rel="stylesheet" href="LGrotte.css">
+<link type="text/css" rel="stylesheet" href="Report.css">
 <title>LiebesGrotte</title>
 <script type="text/javascript" language="javascript"
 	src="reportgenerator/reportgenerator.nocache.js"></script>
 </head>
 <body>
 	<div id="Container_Report">
-		<div id="Headline">
-			<img class="logo_grotte" src="logo_weiß.png"
-				alt="Logo der Liebes-Grotte" />
+		<div id="Navi_Container">
+			<div id="Logo">
+				<img class="logo_grotte" src="logo_weiß.png"
+					alt="Logo der Liebes-Grotte" />
+			</div>
 			<div id="Navi"></div>
 		</div>
+		<div id="Content_Container">
+				<div id="Body-left"></div>
+				<div id="Body-right"></div>
+
+		</div>
 	</div>
-	<div id="Body-left">
-	<div id="Report-Aehnlichkeit"></div>
-	<div id="Report-Attribut"></div>
-	<div id="Report-Eigenschaft"></div>
-</div>
-	<div id="Body-right"></div>
 </body>
 </html>
