Navi-Pop-Up CSS eingefügt und geschafft - endlich

--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -14,14 +14,15 @@
 				<img class="logo_grotte" src="logo_weiß.png"
 					alt="Logo der Liebes-Grotte" />
 			</div>
-			<div id="Navi"></div>
+			<div id="Navi-Wrapper">
+				<div id="Navi"></div>
+				<div id="Navi-Pop"></div>
+			</div>
 		</div>
 		<div id="Content_Container">
 			<div id="Content">
-				<div id="Inhalt">
-				</div>
-				<div id="Zusatz">
-				</div>
+				<div id="Inhalt"></div>
+				<div id="Zusatz"></div>
 			</div>
 		</div>
 		<div id="Fusszeile">
