--- a/LGrotte/war/LGrotte.html
+++ b/LGrotte/war/LGrotte.html
@@ -11,7 +11,7 @@
 	<div id="Container">
 		<div id="Navi_Container">
 			<div id="Logo">
-				<img class="logo_grotte" src="logo_weiß.png"
+				<img class="logo_grotte" src="logo_weiss.png"
 					alt="Logo der Liebes-Grotte" />
 			</div>
 			<div id="Navi-Wrapper">
